--- a/index.html
+++ b/index.html
@@ -38,29 +38,29 @@
             </div>
             <div class="grid">
                 <div class="cards">
-                    <img src="assets/images/AAAABYVcRfFB91jy3f8-_Alb6H4RUzqXFRA7ejjOfCOXF20XLRVeCyT3ZFEimKbZAimt2ayVUWXSnp6ApNxpoK0mA3XzJD__irrDkdMD6lDrOFPSvQqP8s0xn2dNBaU9JxIu4lUd.webp"
+                    <img src=https://occ-0-2368-2186.1.nflxso.net/dnm/api/v6/mAcAr9TxZIVbINe88xb3Teg5_OA/AAAABYVcRfFB91jy3f8-_Alb6H4RUzqXFRA7ejjOfCOXF20XLRVeCyT3ZFEimKbZAimt2ayVUWXSnp6ApNxpoK0mA3XzJD__irrDkdMD6lDrOFPSvQqP8s0xn2dNBaU9JxIu4lUd.webp?r=63b
                         alt="The Royals">
                     <div class="number">1</div>
                 </div>
 
                 <div class="cards">
-                    <img src="assets/images/AAAABWtQdcUd4n6VKz6HTm_IbI2cOq0VDU7fDQpomIXBLuCYqtJ4j8hj2pz7j6spnX2osjRgTMJQ9xkMieYZWqC6xC8G4tGlTLJBm3I.webp"
+                    <img src=https://occ-0-2368-2186.1.nflxso.net/dnm/api/v6/mAcAr9TxZIVbINe88xb3Teg5_OA/AAAABWtQdcUd4n6VKz6HTm_IbI2cOq0VDU7fDQpomIXBLuCYqtJ4j8hj2pz7j6spnX2osjRgTMJQ9xkMieYZWqC6xC8G4tGlTLJBm3I.webp?r=cc2
                         alt="Chavva">
                     <div class="number">2</div>
                 </div>
                 <div class="cards">
-                    <img src="assets/images/AAAABf4wStrKekb1hEKRFD141eOa8rGZTWJK1QxVF2zxvJDivIDqQMNDUmh_d33HVtAxToXkZlAeLEzdhxPXCskBuNsi4X_wSv2Brzk.webp"
+                    <img src=https://occ-0-2368-2186.1.nflxso.net/dnm/api/v6/mAcAr9TxZIVbINe88xb3Teg5_OA/AAAABf4wStrKekb1hEKRFD141eOa8rGZTWJK1QxVF2zxvJDivIDqQMNDUmh_d33HVtAxToXkZlAeLEzdhxPXCskBuNsi4X_wSv2Brzk.webp?r=7de
                         alt="goodbadugly">
                     <div class="number">3</div>
                 </div>
                 <div class="cards">
-                    <img src="assets/images/AAAABUbEuw4gn448vhUbeTgwsmEsA4ZhBFHAbPyFyAk414jH72BDs0ALdA2TEDez1mRZHuyUjlpB_EL0LxkrymlRyHs2joUg2Izzl4Q.webp"
+                    <img src=https://occ-0-2368-2186.1.nflxso.net/dnm/api/v6/mAcAr9TxZIVbINe88xb3Teg5_OA/AAAABUbEuw4gn448vhUbeTgwsmEsA4ZhBFHAbPyFyAk414jH72BDs0ALdA2TEDez1mRZHuyUjlpB_EL0LxkrymlRyHs2joUg2Izzl4Q.webp?r=ad2
                         alt="diplomat">
                     <div class="number">4</div>
                 </div>
                 <div class="cards">
-                    <img src="assets/images/AAAABevU_rod-DWQFVDKVJIZa2-B1BHMVv0YOFyu9puZxb2zdWcFd8hyhIG1NnR9eU7UZffMFgfm1dmtmdb7Z81lqIYZY3eSFu3RPseVoODvi9H2vIDD-JEJLYo2RWZ_WkfjXSJY.webp"
-                        alt="jewel">
+                    <img src=https://occ-0-2368-2186.1.nflxso.net/dnm/api/v6/mAcAr9TxZIVbINe88xb3Teg5_OA/AAAABZFBdXweIqorvQIPkQbuKg9rFcZJJ8yCUzSX1ySYOsmrcMeUgLlY3YWvFcXee7lFjHwMT_Ofd03ttH-rTzAHPZskA6K-f4imBAY.webp?r=81d
+                        alt="sikander">
                     <div class="number">5</div>
                 </div>
                 <div class="cards">
